fix spacing navbar tablet

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -57,7 +57,7 @@ body {
         }
 
         @media #{$tablet} {
-            padding: 2rem 4rem;
+            padding: 2rem 4rem 0 4rem;
             font-size: 12px;
         }
     
